force-app/main/default/objects/Static_Value__mdt/Static_Value__mdt.object-meta.xml
<CustomObject>
    <description>Static value configuration for integration callouts.</description>
    <label>Static Value</label>
    <pluralLabel>Static Values</pluralLabel>
</CustomObject>