force-app/main/default/objects/Static_Value__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the static value is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>