force-app/main/default/objects/Static_Value__mdt/fields/Integration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Integration_Setting__c</fullName>
    <description>The related integration record.</description>
    <label>Integration Setting</label>
    <referenceTo>Integration_Setting__mdt</referenceTo>
    <relationshipLabel>Static Values</relationshipLabel>
    <relationshipName>Static_Values</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>