force-app/main/default/objects/Static_Value__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The static value name.</description>
    <label>Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>