force-app/main/default/objects/Static_Value__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of static value (header or query parameter).</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
                <default>true</default>
                <label>Header</label>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>