force-app/main/default/objects/Static_Value__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value for the static setting.</description>
    <label>Value</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>